Adds add new league (leagues, new.erb)

--- a/views/leagues/index.erb
+++ b/views/leagues/index.erb
@@ -2,6 +2,7 @@
 <hr />
 <% for league in @leagues %>
   <p> Name: <%= league.name()%> </p>
-  <p><a href="/leagues/<%= league.id%>">Show League</a></p>
+  <p><a href="/leagues/<%= league.id() %>">Show League</a></p>
   <hr />
 <% end %>
+<p><a href="/leagues/new">Add League</a></p>
