--- a/views/leagues/show.erb
+++ b/views/leagues/show.erb
@@ -1,5 +1,4 @@
-<p>League: <%= @league.name() %></p>
-<hr />
-<h3>Teams in this league:</h3>
-<p></p>
-<hr />
+<h3>League Details:</h3>
+<!-- <p> <%= @league.name() %></p>
+<hr /> -->
+<% end %>
