--- a/views/leagues/show.erb
+++ b/views/leagues/show.erb
@@ -1,4 +1,5 @@
 <h3>League Details:</h3>
-<!-- <p> <%= @league.name() %></p>
-<hr /> -->
-<% end %>
+<hr />
+  <p> Name: <%= @league.name()%> </p>
+  <p> Teams:</p>
+<hr />
