--- a/views/leagues/show.erb
+++ b/views/leagues/show.erb
@@ -3,3 +3,7 @@
   <p> Name: <%= @league.name()%> </p>
   <p> Teams:</p>
 <hr />
+
+<form action="/leagues/<%=@league.id%>/delete" method="POST">
+  <input type="submit" value="Delete League">
+</form>
