--- a/views/leagues/show.erb
+++ b/views/leagues/show.erb
@@ -7,3 +7,5 @@
 <form action="/leagues/<%=@league.id%>/delete" method="POST">
   <input type="submit" value="Delete League">
 </form>
+
+<a href="/leagues/<%=@league.id%>/edit">Edit League</a>
