--- a/views/leagues/new.erb
+++ b/views/leagues/new.erb
@@ -1,3 +1,4 @@
+<!-- Allows cust to add a new league to their list -->
 <form action="/leagues" method="POST">
 
   <label for="league-name">League Name:</label>
