--- a/views/leagues/show.erb
+++ b/views/leagues/show.erb
@@ -4,8 +4,11 @@
   <p> Teams:</p>
 <hr />
 
+<!-- Deletes league from list -->
 <form action="/leagues/<%=@league.id%>/delete" method="POST">
   <input type="submit" value="Delete League">
 </form>
 
+
+<!-- Edits league -->
 <a href="/leagues/<%=@league.id%>/edit">Edit League</a>
