Adds teams index.erb to list all teams

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,8 +10,7 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/teams">All Teams</a></li>
-      <li><a href="/team/create">Add a Team</a></li>
+      <li><a href="/teams">Teams</a></li>
       <li><a href="/leagues">Leagues</a></li>
     </ul>
   </nav>
