Add new team to list

--- a/views/leagues/new.erb
+++ b/views/leagues/new.erb
@@ -1,4 +1,4 @@
-<!-- Allows cust to add a new league to their list -->
+<!-- Allows user to add a new league to their list -->
 <form action="/leagues" method="POST">
 
   <label for="league-name">League Name:</label>
