--- a/views/teams/show.erb
+++ b/views/teams/show.erb
@@ -1,5 +1,5 @@
 <h3>Team Details:</h3>
 <hr />
   <p> Name: <%= @team.name() %> </p>
-  <p> League: %></p>
+  <p> League: <% @team.league_id() %> </p>
 <hr />
