--- a/views/teams/show.erb
+++ b/views/teams/show.erb
@@ -3,3 +3,8 @@
   <p> Name: <%= @team.name() %> </p>
   <p> League: <% @team.league_id() %> </p>
 <hr />
+
+<!-- Deletes league from list -->
+<form action="/teams/<%= @team.id %>/delete" method="POST">
+  <input type="submit" value="Delete Team">
+</form>
