--- a/views/teams/show.erb
+++ b/views/teams/show.erb
@@ -1,10 +1,10 @@
 <h3>Team Details:</h3>
 <hr />
   <p> Name: <%= @team.name() %> </p>
-  <p> League: <% @team.league_id() %> </p>
+  <p> League: <%= @team.league_id() %> </p>
 <hr />
 
-<!-- Deletes league from list -->
+<!-- Deletes team from list -->
 <form action="/teams/<%= @team.id %>/delete" method="POST">
   <input type="submit" value="Delete Team">
 </form>
