Adds trying to list all teams in a league: showing league name not teams

--- a/views/leagues/show.erb
+++ b/views/leagues/show.erb
@@ -2,6 +2,9 @@
 <hr />
   <p> Name: <%= @league.name() %> </p>
   <p> Teams:   </p>
+  <% for team in @league.teams() %>
+    <p> <%= team.league.name() %> </p>
+  <% end %>
 <hr />
 
 <!-- Deletes league from list -->
