--- a/views/leagues/show.erb
+++ b/views/leagues/show.erb
@@ -3,7 +3,7 @@
   <p> Name: <%= @league.name() %> </p>
   <p> Teams:   </p>
   <% for team in @league.teams() %>
-    <p> <%= team.league.name() %> </p>
+    <p> <%= team.name() %> </p>
   <% end %>
 <hr />
 
