league name now displays when checking team details

--- a/views/teams/show.erb
+++ b/views/teams/show.erb
@@ -1,7 +1,7 @@
 <h3>Team Details:</h3>
 <hr />
   <p> Name: <%= @team.name() %> </p>
-  <p> League: <%= @team.league_id() %> </p>
+  <p> League: <%= @team.league.name() %> </p>
 <hr />
 
 <!-- Deletes team from list -->
