--- a/views/leagues/edit.erb
+++ b/views/leagues/edit.erb
@@ -1,4 +1,6 @@
 <form action="/leagues/<%=@league.id%>" method="POST">
   <label for="league-name">League Name:</label>
   <input type="text" id="league-name" name="name" value="<%= @league.name%>">
+
+  <input type="submit" value="Edit League">
 </form>
