update to layout and home page

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,4 @@
 <div class="home">
-  <h1>FootyScores</h1>
+  <h3>FootyScores</h3>
+  <p> Welcome to FootyScores. Your one stop shop for tracking your favourite leagues and teams.</p>
 </div>
