--- a/views/leagues/show.erb
+++ b/views/leagues/show.erb
@@ -3,8 +3,7 @@
   <p> Name: <%= @league.name() %> </p>
   <p> Teams:   </p>
   <% for team in @league.teams() %>
-    <%= @league.team.name() %>
-    <br>
+    <%= team.name() %>
   <% end %>
 <hr />
 
