CSS style file added and a wee bit of early CSS

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/style.css">
   <title>FootyScores</title>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/teams">Teams</a></li>
-      <li><a href="/leagues">Leagues</a></li>
+  <nav class="nav">
+    <ul class="nav_ul">
+      <li class="nav_li"><a href="/">Home</a></li>
+      <li class="nav_li"><a href="/teams">Teams</a></li>
+      <li class="nav_li"><a href="/leagues">Leagues</a></li>
     </ul>
   </nav>
-  <h1>FootyScores</h1>
+  <h1 class="title">FootyScores</h1>
 
   <%= yield %>
 
