--- a/views/leagues/index.erb
+++ b/views/leagues/index.erb
@@ -1,5 +1,5 @@
 <!-- Dispalys all leaues added by user -->
-<h2>All Leagues:</h2>
+<h2>My Leagues:</h2>
 <hr />
 <% for league in @leagues %>
   <p> Name: <%= league.name()%> </p>
