--- a/views/teams/index.erb
+++ b/views/teams/index.erb
@@ -1,5 +1,5 @@
 <!-- Dispalys all teams added by user -->
-<h2>All Teams:</h2>
+<h2>My Teams:</h2>
 <hr />
 <% for team in @teams %>
   <p> Name: <%= team.name()%> </p>
