--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
 <body>
   <nav class="nav">
     <ul class="nav_ul">
-      <li class="nav_li"><a href="/">Home</a></li>
+      <li class="nav_li" class="btn_home"><a href="/">Home</a></li>
       <li class="nav_li"><a href="/teams">Teams</a></li>
       <li class="nav_li"><a href="/leagues">Leagues</a></li>
     </ul>
