--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,5 @@
 <div class="home">
-  <p> Welcome to FootyScores. Your one stop shop for tracking your favourite leagues and teams.</p>
+  <p> Welcome to FootyScores.
+  <br />
+  Your one stop shop for tracking your favourite leagues and teams.</p>
 </div>
