--- a/views/teams/show.erb
+++ b/views/teams/show.erb
@@ -1,8 +1,8 @@
-<h2>My Teams</h2>
-<h3>Team Details:</h3>
+<h2>Team Details</h2>
 <hr />
   <p> Name: <%= @team.name() %> </p>
   <p> League: <%= @team.league.name() %> </p>
+  <p> Fixtures: </p>
 <hr />
 
 <!-- Deletes team from list -->
