--- a/views/teams/show.erb
+++ b/views/teams/show.erb
@@ -2,7 +2,10 @@
 <hr />
   <p> Name: <%= @team.name() %> </p>
   <p> League: <%= @team.league.name() %> </p>
-  <p> Fixtures: </p>
+  <h3> Fixtures: </h3>
+  <p></p>
+  <h3>Results:</h3>
+  <p></p>
 <hr />
 
 <!-- Deletes team from list -->
