Adds table for fixtures

--- a/views/leagues/index.erb
+++ b/views/leagues/index.erb
@@ -1,4 +1,4 @@
-<!-- Dispalys all leaues added by user -->
+<!-- Dispalys all leagues added by user -->
 <h2>My Leagues:</h2>
 <hr />
 <% for league in @leagues %>
