--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,6 +15,7 @@
       <li class="nav_li" class="btn_home"><a href="/">Home</a></li>
       <li class="nav_li"><a href="/teams">Teams</a></li>
       <li class="nav_li"><a href="/leagues">Leagues</a></li>
+      <li class="nav_li"><a href="/fixtures">Fixtures</a></li>
       <li class="nav_li"><a href="/matches">Matches</a></li>
     </ul>
   </nav>
