--- a/views/fixtures/index.erb
+++ b/views/fixtures/index.erb
@@ -1,1 +1,9 @@
 <h2>Fixtures</h2>
+<hr />
+<% for fixture in @fixtures %>
+    <p> League:<%= fixture.league_id() %> </p>
+    <p> Match:<%= fixture.match_id() %> </p>
+    <p> <%= fixture.home_team() %> V <%= fixture.away_team() %> </p>
+    <p> Score: </p>
+<hr />
+<% end %>
