--- a/public/style.css
+++ b/public/style.css
@@ -33,6 +33,8 @@ body {
   font-size: 20px;
   color: white;
   padding-left: 80px;
+  border-radius: 3px
+  border: 1px solid white;
 
 }
 
@@ -56,4 +58,7 @@ h2, h3 {
 
 a, a:visited {
   color: white;
+  border-color: white;
+  border-style: solid;
+  text-decoration: none;
 }
