--- a/views/fixtures/index.erb
+++ b/views/fixtures/index.erb
@@ -11,7 +11,7 @@
   <p> <%= fixture.home_team() %> V <%= fixture.away_team() %> </p>
 
     <% for match in fixture.matches() %>
-      <p> <%= match.score() %> </p>
+      <p> Score: <%= match.score() %> </p>
     <% end %>
 
   <hr />
