adds match details and team stats to matches

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,6 +16,7 @@
       <li class="nav_li"><a href="/teams">Teams</a></li>
       <li class="nav_li"><a href="/leagues">Leagues</a></li>
       <li class="nav_li"><a href="/fixtures">Fixtures</a></li>
+      <li class="nav_li"><a href="/matches">Matches</a></li>
     </ul>
   </nav>
   <h1 class="title">FootyScores</h1>
