--- a/views/matches/index.erb
+++ b/views/matches/index.erb
@@ -2,6 +2,15 @@
 <hr />
 <% for match in @matches %>
     <p> <%= match.name() %> </p>
-    <p> <%= match.score() %> </p>
+    <p> Team: <%= match.team1_id() %> </p>
+    <p> Score: <%= match.score %>
+      
+<h2>How team is doing:</h2>
+    <p> P: <%= match.games_played %> </p>
+    <p> W: <%= match.games_won %> </p>
+    <p> L: <%= match.games_lost %> </p>
+    <p> GF: <%= match.goals_for %> </p>
+    <p> GA: <%= match.goals_against %> </p>
+    <p> Points: <%= match.points %> </p>
   <hr />
 <% end %>
