--- a/views/fixtures/index.erb
+++ b/views/fixtures/index.erb
@@ -10,5 +10,9 @@
 
   <p> <%= fixture.home_team() %> V <%= fixture.away_team() %> </p>
 
+  <% for match in fixture.matches() %>
+    <p> <%= match.score() %> </p>
+  <% end %>
+
   <hr />
 <% end %>
