--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="/style/buttons.css">
 
   <title>FootyScores</title>
 </head>
@@ -16,10 +15,13 @@
       <li class="nav_li"><a href="/teams">Teams</a></li>
       <li class="nav_li"><a href="/leagues">Leagues</a></li>
       <li class="nav_li"><a href="/fixtures">Fixtures</a></li>
-      <li class="nav_li"><a href="/matches">Matches</a></li>
     </ul>
   </nav>
-  <h1 class="title">FootyScores</h1>
+
+  <h1 class="title">F<img src="/images/ball3.png" alt="FootyScores" width=35px height=35px><img src="/images/ball3.png" alt="FootyScores" width=35px height=35px>tySc<img src="/images/ball3.png" alt="FootyScores" width=35px height=35px>res</h1>
+  <!-- ball2 image from http://pngimg.com/download/52797 -->
+  <!-- ball3 image from http://pngimg.com/download/52750 -->
+
 
   <%= yield %>
 
