--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,8 +17,13 @@
       <li class="nav_li"><a href="/fixtures">Fixtures</a></li>
     </ul>
   </nav>
-
-  <h1 class="title">F<img src="/images/ball3.png" alt="FootyScores" width=35px height=35px><img src="/images/ball3.png" alt="FootyScores" width=35px height=35px>tySc<img src="/images/ball3.png" alt="FootyScores" width=35px height=35px>res</h1>
+<div class="grid">
+  <div class="grid-row grid-row-sm">
+    <div class="cell">
+      <h1 class="title">F<img src="/images/ball3.png" alt="FootyScores" width=30px height=30px><img src="/images/ball3.png" alt="FootyScores" width=30px height=30px>tySc<img src="/images/ball3.png" alt="FootyScores" width=30px height=30px>res</h1>
+    </div>
+  </div>
+</div>
   <!-- ball2 image from http://pngimg.com/download/52797 -->
   <!-- ball3 image from http://pngimg.com/download/52750 -->
 
